--- a/fairwaytech_tutorial/package.json
+++ b/fairwaytech_tutorial/package.json
@@ -14,5 +14,9 @@
     "url": "https://github.com/craigmaslowski/Grunt-Tutorial.git"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0"
   }
 }
