--- a/fairwaytech_tutorial/package.json
+++ b/fairwaytech_tutorial/package.json
@@ -14,9 +14,11 @@
     "url": "https://github.com/craigmaslowski/Grunt-Tutorial.git"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.7.0"
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-simple-mocha": "^0.4.0"
   }
 }
